Fix `update` command task execution